# beatbank-senior-project

./: .env  .gitignore  ECCodeDump.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  readme.md  test_venv_path.py  vite.config.ts
.github/workflows/: build.yml  main.yml
beatbank/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
beatbank/src/: App.tsx  Main.css
beatbank/src-tauri/: Cargo.toml  database.sqlite  diesel.toml  tauri.conf.json
src/: App.tsx  Main.css  bindings.ts  store.ts
src-tauri/: .gitignore  Cargo.toml  database.sqlite  diesel.toml  requirements.txt  settings.json  tauri.conf.json
src-tauri/migrations/2024-09-22-215715_create_beats/: down.sql  up.sql
src-tauri/migrations/2024-09-25-230906_update_beats/: down.sql  up.sql
src-tauri/migrations/2024-09-26-014815_create_beats/: down.sql  up.sql
src-tauri/migrations/2024-09-30-215016_nullable_artist/: down.sql  up.sql
src-tauri/migrations/2024-09-30-224815_create_set_tables/: down.sql  up.sql
src-tauri/migrations/2024-10-21-173021_add_cascade_delete/: down.sql  up.sql
src-tauri/migrations/2024-10-24-035809_row_order/: down.sql  up.sql
src-tauri/src/: audio_analysis.rs  audio_analyzer.py  db.rs  main.rs  models.rs  schema.rs  store.rs  test_audio.py  test_import.py
src/components/: BeatCollection.tsx  BeatTable.tsx  DraggableRow.tsx  DroppableCollection.tsx  EditBeatCard.tsx  GhostDragRow.tsx  RowDragHandleCell.tsx  SettingsDropdown.tsx  Sidebar.tsx  SplashScreen.tsx  UploadBeat.tsx
src/hooks/: useBeats.tsx
(+5 files in other folders)
