[package]
name = "beatbank"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }
pyo3-build-config = "0.22.5"

[dependencies]
rusqlite = { version = "0.32.0", features = ["bundled"] }
tauri = { version = "1", features = [ "fs-read-dir", "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "aac"] }

[dependencies.pyo3]
version = "0.22.5"
features = ["auto-initialize"]


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
